--- a/chatroomservice/src/main/resources/templates/chatroom.html
+++ b/chatroomservice/src/main/resources/templates/chatroom.html
@@ -1,15 +1,21 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
-<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
-
 <html>
 <head>
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/webjars/jquery/jquery.min.js"></script>
+    <link href="/webjars/noty/3.1.4/lib/noty.css" rel="stylesheet"/>
+    <link href="/webjars/noty/3.1.4/demo/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
+
+    <script defer src="/webjars/jquery/jquery.min.js"></script>
+    <script defer src="/webjars/noty/3.1.4/lib/noty.min.js"></script>
+
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
+
+    <script src="/js/socket.js"></script>
+    <script src="/js/chats.js"></script>
 </head>
 <body>
-<h3>You is ${userId} </h3> <a href="/login">Unlogin</a>
+<h3>You is ${userId} </h3> <a href="/logout">Logout</a>
 <h4>Messages:</h4>
 <div id="messages">
     <c:forEach items="${messages}" var="message">
@@ -22,10 +28,5 @@
     <input id="message_text" type="text"/>
     <a onclick="sendMessage()">Send</a>
 </form>
-<script>
-    let userId = '${userId}';
-    let chatId = '${chatId}';
-</script>
-<script src="${pageContext.request.contextPath}/app.js"></script>
 </body>
 </html>
