--- a/chatroomservice/src/main/resources/static/css/main.css
+++ b/chatroomservice/src/main/resources/static/css/main.css
@@ -13,18 +13,14 @@ body {
     background-color: #f5f5f5;
 }
 
-.form-signin {
+.form {
     width: 100%;
     max-width: 330px;
     padding: 15px;
     margin: auto;
 }
 
-.form-signin .checkbox {
-    font-weight: 400;
-}
-
-.form-signin .form-control {
+.form .form-control {
     position: relative;
     box-sizing: border-box;
     height: auto;
@@ -32,17 +28,17 @@ body {
     font-size: 16px;
 }
 
-.form-signin .form-control:focus {
+.form .form-control:focus {
     z-index: 2;
 }
 
-.form-signin input[type="username"] {
+.form input[type="username"] {
     margin-bottom: -1px;
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
+.form input[type="password"] {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
