--- a/chatroomservice/src/main/resources/templates/login.html
+++ b/chatroomservice/src/main/resources/templates/login.html
@@ -7,28 +7,30 @@
     <link href="/webjars/noty/3.1.4/demo/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
 
-    <script defer src="/webjars/jquery/jquery.min.js"></script>
+    <script src="/webjars/jquery/jquery.min.js"></script>
     <script defer src="/webjars/noty/3.1.4/lib/noty.min.js"></script>
-    <script defer src="/js/main.js"></script>
-    <script defer src="/js/authorize.js"></script>
 </head>
 
 <body class="text-center">
-<form action="http://192.168.1.71:8080" class="form" method="post">
-    <input id="accessToken" name="accessToken" type="hidden">
-
+<form class="form" method="post">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
 
     <label class="sr-only" for="inputUsername">Username</label>
-    <input autofocus class="form-control" id="inputUsername" placeholder="Username" required type="text">
+    <input autofocus class="form-control" id="inputUsername" name="username" placeholder="Username" required
+           type="text">
 
     <label class="sr-only" for="inputPassword">Password</label>
-    <input class="form-control" id="inputPassword" placeholder="Password" required type="password">
+    <input class="form-control" id="inputPassword" name="password" placeholder="Password" required type="password">
 
-    <button class="btn btn-lg btn-primary btn-block" onclick="authorize()" type="button">Sign in</button>
+    <input class="btn btn-lg btn-primary btn-block" type="submit" value="Sign in">
 
     <br>OR<br>
     <a href="/regist">Registration in service</a>
 </form>
+
+<script>
+    let error = "[[${error}]]";
+</script>
+<script src="/js/main.js"></script>
 </body>
 </html>
