--- a/chatroomservice/src/main/resources/templates/chatroom.html
+++ b/chatroomservice/src/main/resources/templates/chatroom.html
@@ -28,9 +28,9 @@
 
     <div class="container">
 
-        <div class="chats list-group"><!--ChatList--></div>
+        <div class="chats list-group"></div>
 
-        <div class="messages"><!--MessageList--></div>
+        <div class="messages"></div>
 
         <div class="input">
             <div class="form_message">
