--- a/chatroomservice/src/main/resources/templates/login.html
+++ b/chatroomservice/src/main/resources/templates/login.html
@@ -2,6 +2,8 @@
 <head>
     <title>Signin chatroom</title>
 
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/webjars/noty/3.1.4/lib/noty.css" rel="stylesheet"/>
     <link href="/webjars/noty/3.1.4/demo/font-awesome/css/font-awesome.min.css" rel="stylesheet">
